@@ -49,7 +49,7 @@ public class TraversalPredicateVisitorTest {
                 {"gt(1.0D)", P.gt(1d)},
                 {"gte(1L)", P.gte(1L)},
                 {"inside(100, 200)", P.inside(100, 200)},
-                {"outside(1E11, 2e-11)", P.outside(new BigDecimal("1E11"), new BigDecimal("2e-11"))},
+                {"outside(1E11, 2e-11)", P.outside(new Double("1E11"), new Double("2e-11"))},
                 {"between(\"a\", \"e\")", P.between("a", "e")},
                 {"within([\"a\", \"e\"])", P.within(Arrays.asList("a", "e"))},
                 {"within()", P.within()},
@@ -73,7 +73,7 @@ public class TraversalPredicateVisitorTest {
                 {"P.gt(1.0D)", P.gt(1d)},
                 {"P.gte(1L)", P.gte(1L)},
                 {"P.inside(100, 200)", P.inside(100, 200)},
-                {"P.outside(1E11, 2e-11)", P.outside(new BigDecimal("1E11"), new BigDecimal("2e-11"))},
+                {"P.outside(1E11, 2e-11)", P.outside(new Double("1E11"), new Double("2e-11"))},
                 {"P.between(\"a\", \"e\")", P.between("a", "e")},
                 {"P.within([\"a\", \"e\"])", P.within(Arrays.asList("a", "e"))},
                 {"P.within()", P.within()},
